--- a/app/src/main/res/layout/activity_register_movie.xml
+++ b/app/src/main/res/layout/activity_register_movie.xml
@@ -14,6 +14,7 @@
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
         android:background="@color/theaterbuzz_orange"
+        app:title="@string/register_movie"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"></androidx.appcompat.widget.Toolbar>
