--- a/app/src/main/res/layout/activity_register_movie.xml
+++ b/app/src/main/res/layout/activity_register_movie.xml
@@ -21,8 +21,8 @@
 
     <ScrollView
         android:id="@+id/scrollView2"
-        android:layout_width="415dp"
-        android:layout_height="512dp"
+        android:layout_width="0dp"
+        android:layout_height="517dp"
         android:layout_marginTop="4dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
@@ -112,7 +112,7 @@
                 android:layout_height="wrap_content"
                 android:ems="10"
                 android:hint="Movie rating (1 - 10)"
-                android:inputType="textPersonName"
+                android:inputType="number"
                 android:text="" />
 
             <TextView
