code for the FavoruitesActivity done, but not yet tested

--- a/app/src/main/res/layout/activity_display_movie.xml
+++ b/app/src/main/res/layout/activity_display_movie.xml
@@ -11,7 +11,7 @@
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
         android:background="@color/theaterbuzz_orange"
-        app:title="@string/register_movie"
+        app:title="@string/display_movie"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"></androidx.appcompat.widget.Toolbar>
@@ -38,7 +38,7 @@
     </ScrollView>
 
     <Button
-        android:id="@+id/btnSaveFavourites"
+        android:id="@+id/btnSaveDisplay"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
