--- a/app/src/main/res/layout/activity_display_movie.xml
+++ b/app/src/main/res/layout/activity_display_movie.xml
@@ -11,42 +11,43 @@
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
         android:background="@color/theaterbuzz_orange"
-        app:title="@string/display_movie"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"></androidx.appcompat.widget.Toolbar>
+        app:layout_constraintTop_toTopOf="parent"
+        app:title="@string/display_movie"></androidx.appcompat.widget.Toolbar>
 
-    <ScrollView
-        android:id="@+id/displayScrollView"
-        android:layout_width="0dp"
-        android:layout_height="517dp"
-        android:layout_marginTop="4dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/toolbar3">
+    <!--    <ScrollView-->
+    <!--        android:id="@+id/displayScrollView"-->
+    <!--        android:layout_width="0dp"-->
+    <!--        android:layout_height="517dp"-->
+    <!--        android:layout_marginTop="4dp"-->
+    <!--        app:layout_constraintEnd_toEndOf="parent"-->
+    <!--        app:layout_constraintHorizontal_bias="1.0"-->
+    <!--        app:layout_constraintStart_toStartOf="parent"-->
+    <!--        app:layout_constraintTop_toBottomOf="@+id/toolbar3">-->
 
-        <ListView
-            android:id="@+id/displayMoviesListView"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:choiceMode="multipleChoice"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-    </ScrollView>
+
+    <!--    </ScrollView>-->
+
+    <ListView
+        android:id="@+id/displayMoviesListView"
+        android:layout_width="match_parent"
+        android:layout_height="553dp"
+        android:choiceMode="multipleChoice"
+        app:layout_constraintBottom_toTopOf="@+id/btnSaveDisplay"
+        app:layout_constraintTop_toBottomOf="@+id/toolbar3"
+        app:layout_constraintVertical_bias="0.0"
+        tools:layout_editor_absoluteX="0dp" />
 
     <Button
         android:id="@+id/btnSaveDisplay"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
-        android:text="Add to Favourites"
+        android:layout_marginBottom="40dp"
         android:onClick="saveFavourites"
+        android:text="Add to Favourites"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/displayScrollView" />
+        app:layout_constraintStart_toStartOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
