--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,7 +12,8 @@
     <color name="light_blue_A200">#FF40C4FF</color>
     <color name="light_blue_A400">#FF00B0FF</color>
     <color name="black_overlay">#66000000</color>
+    <color name="neon_yellow">#f7ff00</color>
 
-    <color name="theaterbuzz_yellow">#f7ff00</color>
+    <color name="theaterbuzz_yellow">#FFFF00</color>
     <color name="theaterbuzz_orange">#FF6700</color>
 </resources>
