--- a/app/src/main/res/layout/activity_display_movie.xml
+++ b/app/src/main/res/layout/activity_display_movie.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/app_back"
     tools:context=".DisplayMovieActivity">
 
     <androidx.appcompat.widget.Toolbar
@@ -46,6 +47,7 @@
         android:layout_marginBottom="40dp"
         android:onClick="saveFavourites"
         android:text="Add to Favourites"
+        android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
