--- a/app/src/main/res/layout/activity_register_movie.xml
+++ b/app/src/main/res/layout/activity_register_movie.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:gravity="center_horizontal"
+    android:background="@drawable/app_back"
     android:orientation="vertical"
     app:layout_anchorGravity="center_horizontal"
     tools:context=".RegisterMovieActivity">
@@ -138,8 +139,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
-        android:text="Save"
         android:onClick="registerMovie"
+        android:text="Save"
+        android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
