--- a/app/src/main/res/layout/movie_image_dialog.xml
+++ b/app/src/main/res/layout/movie_image_dialog.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:background="@drawable/app_back"
     android:layout_width="match_parent" android:layout_height="match_parent">
 
 
@@ -8,6 +9,9 @@
         android:id="@+id/imgMovie"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_margin="20dp"
-        app:srcCompat="@mipmap/main_logo" />
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginEnd="20dp"
+        android:layout_marginBottom="20dp"
+        app:srcCompat="@mipmap/ic_launcher" />
 </RelativeLayout>
